[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/buttons/play_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/buttons/settings_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/sample_screen.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/buttons/quit_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/title_screen/title_screen.gd" type="Script" id=5]

[node name="title_screen" instance=ExtResource( 3 )]
script = ExtResource( 5 )

[node name="name" parent="menu/top_row" index="0"]
margin_right = 292.0
text = "platformer"

[node name="play_button" parent="menu/bottom_row/buttons" index="0" instance=ExtResource( 1 )]
margin_right = 1040.0

[node name="settings_button" parent="menu/bottom_row/buttons" index="1" instance=ExtResource( 2 )]
margin_top = 49.0
margin_right = 1040.0
margin_bottom = 94.0

[node name="quit_button" parent="menu/bottom_row/buttons" index="2" instance=ExtResource( 4 )]
margin_top = 98.0
margin_right = 1040.0
margin_bottom = 143.0
[connection signal="pressed" from="menu/bottom_row/buttons/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="menu/bottom_row/buttons/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="menu/bottom_row/buttons/quit_button" to="." method="_on_quit_button_pressed"]
